# azure-openai-to-responses

./: .gitignore  README.md  mcp_server.py  migrate.py  pyproject.toml
.github/agents/: azure-openai-to-responses.agent.md
.github/skills/azure-openai-to-responses/: SKILL.md
.github/skills/azure-openai-to-responses/references/: cheat-sheet.md  troubleshooting.md
.github/skills/azure-openai-to-responses/scripts/: detect_legacy.py
.github/skills/move-to-openai-responses/: SKILL.md
.github/skills/move-to-openai-responses/references/: cheat-sheet.md
demo/openai-chat-app-quickstart/: .env.sample  README.md
demo/openai-chat-app-quickstart/infra/: aca.bicep  main.bicep  main.parameters.json
demo/openai-chat-app-quickstart/src/: requirements.txt
demo/openai-chat-app-quickstart/src/quartapp/: chat.py
demo/openai-chat-app-quickstart/src/quartapp/templates/: index.html
demo/openai-chat-app-quickstart/tests/: conftest.py  test_app.py
skills/azure-openai-to-responses/: SKILL.md
skills/azure-openai-to-responses/references/: cheat-sheet.md  troubleshooting.md
skills/azure-openai-to-responses/scripts/: detect_legacy.py
tools/: bulk_migrate.py  find_legacy_openai_repos.py  model_compat.py  test_migration.py
